Gray-Space/src/objects/ARH__Configuration__c.object
<CustomObject>
    <fields>
        <fullName>ARH__Detail_Field_1__c</fullName>
        <label>Detail Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Detail_Field_2__c</fullName>
        <label>Detail Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Detail_Field_3__c</fullName>
        <label>Detail Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Object__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Relationship_Field__c</fullName>
        <label>Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Search_Field__c</fullName>
        <label>Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Visual_Field__c</fullName>
        <label>Visual Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARH__Visual_Type__c</fullName>
        <label>Visual Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Abbreviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>ARH__All</fullName>
        <columns>NAME</columns>
        <columns>ARH__Object__c</columns>
        <columns>ARH__Relationship_Field__c</columns>
        <columns>ARH__Detail_Field_1__c</columns>
        <columns>ARH__Detail_Field_2__c</columns>
        <columns>ARH__Detail_Field_3__c</columns>
        <columns>ARH__Detail_Field_4__c</columns>
        <columns>ARH__Detail_Field_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>